# tinirpc

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
example/: Makefile  cmake_install.cmake  friend.proto
example/callee/: Makefile  cmake_install.cmake  friendservice.cc  userservice.cc
example/caller/: Makefile  callfriendservice.cc  calluserservice.cc  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcheader.proto  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
